k8s/result-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: vote-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
        - name: result
          image: fawad9/result:v3.0
          ports:
            - containerPort: 80
