k8s/all-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: vote-app
spec:
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: vote-app
spec:
  selector:
    app: result
  ports:
  - port: 80
    targetPort: 80
    ---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: vote-app
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
