k8s/postgres-services.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: vote-app
spec:
  selector:
    app: postgres
  ports:
  - port: 5432
    targetPort: 5432
  type: ClusterIP
