k8s/redis-services.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: vote-app
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
  type: ClusterIP
