k8s/result-services.yml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  namespace: voting-app
spec:
  selector:
    app: result
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
