k8s/vote-services.yml
apiVersion: v1
kind: Service
metadata:
  name: vote-service
  namespace: vote-app
spec:
  selector:
    app: vote
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
