k8s/worker-services.yml
apiVersion: v1
kind: Service
metadata:
  name: worker-service
  namespace: vote-app
spec:
  selector:
    app: worker
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
